[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "seedlink-py-utils"
version = "0.1.0"
description = "Real-time SeedLink tools in Python: trace + spectrogram viewer and helpers."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Andrew J. Schaeffer"},
]
keywords = ["seismology", "seedlink", "obspy", "real-time", "spectrogram"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "obspy>=1.4",
    "numpy>=1.21",
    "scipy>=1.8",
    "matplotlib>=3.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "ruff",
]

[project.scripts]
seedlink-py-viewer = "seedlink_py_utils.cli:main"
seedlink-py-archiver = "seedlink_py_utils.archiver_cli:main"

[project.urls]
Homepage = "https://github.com/schaefferaj/SeedlinkPyUtils"
Issues = "https://github.com/schaefferaj/SeedlinkPyUtils/issues"

[tool.setuptools.packages.find]
where = ["src"]
